--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,25 @@
 <html>
     <head>
         <title>Display</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+        <style>
+        body, html {
+            height: 100%;
+            margin: 0;
+            background-color: black; /* Set the background color to black */
+        }
+        .fullsize-image {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            max-width: 100%;
+            max-height: 100%;
+        }
+    </style>
     </head>
     <body>
         <h1>Hello, World!</h1>
