--- a/display/src/index.html
+++ b/display/src/index.html
@@ -5,21 +5,7 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-        <style>
-        body, html {
-            height: 100%;
-            margin: 0;
-            background-color: black; /* Set the background color to black */
-        }
-        .fullsize-image {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            max-width: 100%;
-            max-height: 100%;
-        }
-    </style>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>Hello, World!</h1>
