--- a/display/src/index.html
+++ b/display/src/index.html
@@ -5,10 +5,12 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="css/clock.css">
+        <link rel="stylesheet" href="css/gallery.css">
     </head>
     <body>
         <h1>Hello, World!</h1>
-        <script src="script.js"></script>
+        <script src="js/clock.js"></script>
     </body>
 </html>
