--- a/display/src/index.html
+++ b/display/src/index.html
@@ -11,6 +11,6 @@
     </head>
     <body>
         <h1>Hello, World!</h1>
-        <script src="js/clock.js"></script>
+        <script src="js/gallery.js"></script>
     </body>
 </html>
