--- a/display/src/index.html
+++ b/display/src/index.html
@@ -12,5 +12,60 @@
     <body>
         <h1>Hello, World!</h1>
         <script src="js/clock.js"></script>
+        <script>
+        // Function to request full-screen mode
+        function requestFullScreen() {
+            const elem = document.documentElement;
+            if (elem.requestFullscreen) {
+                elem.requestFullscreen();
+            } else if (elem.mozRequestFullScreen) { // Firefox
+                elem.mozRequestFullScreen();
+            } else if (elem.webkitRequestFullscreen) { // Chrome, Safari and Opera
+                elem.webkitRequestFullscreen();
+            } else if (elem.msRequestFullscreen) { // IE/Edge
+                elem.msRequestFullscreen();
+            }
+        }
+
+        // Function to hide the address bar
+        function hideAddressBar() {
+            window.scrollTo(0, 1);
+        }
+
+        // Call functions on page load
+        window.onload = function() {
+            requestFullScreen();
+            hideAddressBar();
+        };
+    </script>
     </body>
 </html>
+
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+<!--    <title>Centered SVG Circle</title>-->
+<!--            <link rel="stylesheet" href="css/styles.css">-->
+<!--        <link rel="stylesheet" href="css/clock.css">-->
+<!--        <link rel="stylesheet" href="css/gallery.css">-->
+<!--    <style>-->
+<!--&lt;!&ndash;        body, html {&ndash;&gt;-->
+<!--&lt;!&ndash;            height: 100%;&ndash;&gt;-->
+<!--&lt;!&ndash;            margin: 0;&ndash;&gt;-->
+<!--&lt;!&ndash;            display: flex;&ndash;&gt;-->
+<!--&lt;!&ndash;            justify-content: center;&ndash;&gt;-->
+<!--&lt;!&ndash;            align-items: center;&ndash;&gt;-->
+<!--&lt;!&ndash;        }&ndash;&gt;-->
+<!--&lt;!&ndash;        svg {&ndash;&gt;-->
+<!--&lt;!&ndash;            display: block;&ndash;&gt;-->
+<!--&lt;!&ndash;        }&ndash;&gt;-->
+<!--    </style>-->
+<!--</head>-->
+<!--<body>-->
+<!--    <svg id="clock" width="100" height="100">-->
+<!--        <circle cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="red" />-->
+<!--    </svg>-->
+<!--</body>-->
+<!--</html>-->
