--- a/display/src/index.html
+++ b/display/src/index.html
@@ -6,13 +6,21 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
         <link rel="stylesheet" href="css/styles.css">
+
         <link rel="stylesheet" href="css/clock.css">
         <link rel="stylesheet" href="css/gallery.css">
     </head>
     <body>
         <h1>Hello, World!</h1>
+        <div id="consoleOutput"></div>
         <script src="js/full_screen.js"></script>
+        <script src="js/common.js"></script>
+
         <script src="js/gallery.js"></script>
+        <script src="js/clock.js"></script>
+<!--        <script src="js/weather.js"></script>-->
+
+        <script src="js/controller.js"></script>
     </body>
 </html>
 
