--- a/display/src/index.html
+++ b/display/src/index.html
@@ -7,15 +7,20 @@
 
         <link rel="stylesheet" href="css/styles.css">
 
+        <link rel="stylesheet" href="css/consoleLog.css">
         <link rel="stylesheet" href="css/clock.css">
         <link rel="stylesheet" href="css/gallery.css">
     </head>
     <body>
-        <h1>Hello, World!</h1>
-        <div id="consoleOutput"></div>
+        <div id="content">
+            <h1>Hello, World!</h1>
+            <div id="consoleOutput"></div>
+        </div>
+
         <script src="js/full_screen.js"></script>
         <script src="js/common.js"></script>
 
+        <script src="js/consoleLog.js"></script>
         <script src="js/gallery.js"></script>
         <script src="js/clock.js"></script>
 <!--        <script src="js/weather.js"></script>-->
