--- a/display/src/index.html
+++ b/display/src/index.html
@@ -7,11 +7,12 @@
 
         <link rel="stylesheet" href="css/styles.css">
 
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="css/consoleLog.css">
         <link rel="stylesheet" href="css/clock.css">
         <link rel="stylesheet" href="css/gallery.css">
     </head>
-    <body>
+    <body data-bs-theme="dark">
         <div id="content">
             <h1>Hello, World!</h1>
             <div id="consoleOutput"></div>
@@ -26,6 +27,7 @@
 <!--        <script src="js/weather.js"></script>-->
 
         <script src="js/controller.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
 </html>
 
