--- a/display/src/index.html
+++ b/display/src/index.html
@@ -1,33 +1,42 @@
 <html>
     <head>
         <title>Display</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0 viewport-fit=cover">
-        <meta name="apple-mobile-web-app-capable" content="yes">
-        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+        <meta name='viewport' content='width=device-width, initial-scale=1.0 viewport-fit=cover'>
+        <meta name='apple-mobile-web-app-capable' content='yes'>
+        <meta name='apple-mobile-web-app-status-bar-style' content='black-translucent'>
 
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel='stylesheet' href='css/styles.css'>
 
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/consoleLog.css">
-        <link rel="stylesheet" href="css/clock.css">
-        <link rel="stylesheet" href="css/gallery.css">
+<!--        Bootstrap-->
+        <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css' rel='stylesheet' 
+              integrity='sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH' 
+              crossorigin='anonymous'>
+        
+        <link rel='stylesheet' href='css/clock.css'>
+        <link rel='stylesheet' href='css/config.css'>
+        <link rel='stylesheet' href='css/consoleLog.css'>
+        <link rel='stylesheet' href='css/gallery.css'>
     </head>
-    <body data-bs-theme="dark">
-        <div id="content">
+    <body data-bs-theme='dark'>
+        <div id='content'>
             <h1>Hello, World!</h1>
-            <div id="consoleOutput"></div>
+            <div id='consoleOutput'></div>
         </div>
 
-        <script src="js/full_screen.js"></script>
-        <script src="js/common.js"></script>
+        <script src='js/full_screen.js'></script>
+        <script src='js/common.js'></script>
 
-        <script src="js/consoleLog.js"></script>
-        <script src="js/gallery.js"></script>
-        <script src="js/clock.js"></script>
-<!--        <script src="js/weather.js"></script>-->
+        <script src='js/gallery.js'></script>
+        <script src='js/clock.js'></script>
+        <script src='js/config.js'></script>
+        <script src='js/consoleLog.js'></script>
 
-        <script src="js/controller.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <script src='js/controller.js'></script>
+
+<!--        Bootstrap-->
+        <script src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js' 
+                integrity='sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz' 
+                crossorigin='anonymous'></script>
     </body>
 </html>
 
