--- a/display/src/index.html
+++ b/display/src/index.html
@@ -25,10 +25,12 @@
         <script src='js/full_screen.js'></script>
         <script src='js/common.js'></script>
 
-        <script src='js/gallery.js'></script>
+        <script src='js/appSwitcher.js'></script>
         <script src='js/clock.js'></script>
         <script src='js/config.js'></script>
         <script src='js/consoleLog.js'></script>
+        <script src='js/gallery.js'></script>
+        <script src='js/quotes.js'></script>
 
         <script src='js/controller.js'></script>
 
