this is the appList working

--- a/display/src/index.html
+++ b/display/src/index.html
@@ -25,6 +25,7 @@
         <script src='js/full_screen.js'></script>
         <script src='js/common.js'></script>
 
+        <script src='js/appList.js'></script>
         <script src='js/appSwitcher.js'></script>
         <script src='js/clock.js'></script>
         <script src='js/config.js'></script>
