Refactored js into apps and util

--- a/display/src/index.html
+++ b/display/src/index.html
@@ -22,18 +22,18 @@
             <h1>Hello, World!</h1>
         </div>
 
-        <script src='js/full_screen.js'></script>
-        <script src='js/common.js'></script>
+        <script src='js/util/full_screen.js'></script>
+        <script src='js/util/common.js'></script>
+        <script src='js/util/appList.js'></script>
 
-        <script src='js/appList.js'></script>
-        <script src='js/appSwitcher.js'></script>
-        <script src='js/clock.js'></script>
-        <script src='js/config.js'></script>
-        <script src='js/consoleLog.js'></script>
-        <script src='js/gallery.js'></script>
-        <script src='js/quotes.js'></script>
+        <script src='js/app/appSwitcher.js'></script>
+        <script src='js/app/clock.js'></script>
+        <script src='js/app/config.js'></script>
+        <script src='js/app/consoleLog.js'></script>
+        <script src='js/app/gallery.js'></script>
+        <script src='js/app/quotes.js'></script>
 
-        <script src='js/controller.js'></script>
+        <script src='js/util/controller.js'></script>
 
 <!--        Bootstrap-->
         <script src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js' 
