dynamic loading of stylesheet and new app directory for clock

--- a/display/src/index.html
+++ b/display/src/index.html
@@ -12,7 +12,6 @@
               integrity='sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH' 
               crossorigin='anonymous'>
         
-        <link rel='stylesheet' href='css/clock.css'>
         <link rel='stylesheet' href='css/config.css'>
         <link rel='stylesheet' href='css/consoleLog.css'>
         <link rel='stylesheet' href='css/gallery.css'>
@@ -24,10 +23,11 @@
 
         <script src='js/util/full_screen.js'></script>
         <script src='js/util/common.js'></script>
+        <script src='js/util/base.js'></script>
         <script src='js/util/appList.js'></script>
 
         <script src='js/app/appSwitcher.js'></script>
-        <script src='js/app/clock.js'></script>
+        <script src='app/clock/clock.js'></script>
         <script src='js/app/config.js'></script>
         <script src='js/app/consoleLog.js'></script>
         <script src='js/app/gallery.js'></script>
