config and appSwitcher changed to app structure

--- a/display/src/index.html
+++ b/display/src/index.html
@@ -26,9 +26,9 @@
         <script src='js/util/base.js'></script>
         <script src='js/util/appList.js'></script>
 
-        <script src='js/app/appSwitcher.js'></script>
+        <script src='app/appSwitcher/appSwitcher.js'></script>
         <script src='app/clock/clock.js'></script>
-        <script src='js/app/config.js'></script>
+        <script src='app/config/config.js'></script>
         <script src='js/app/consoleLog.js'></script>
         <script src='js/app/gallery.js'></script>
         <script src='js/app/quotes.js'></script>
