console log moved to new app structure

--- a/display/src/index.html
+++ b/display/src/index.html
@@ -12,8 +12,6 @@
               integrity='sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH' 
               crossorigin='anonymous'>
         
-        <link rel='stylesheet' href='css/config.css'>
-        <link rel='stylesheet' href='css/consoleLog.css'>
         <link rel='stylesheet' href='css/gallery.css'>
     </head>
     <body data-bs-theme='dark'>
@@ -29,7 +27,7 @@
         <script src='app/appSwitcher/appSwitcher.js'></script>
         <script src='app/clock/clock.js'></script>
         <script src='app/config/config.js'></script>
-        <script src='js/app/consoleLog.js'></script>
+        <script src='app/consoleLog/consoleLog.js'></script>
         <script src='js/app/gallery.js'></script>
         <script src='js/app/quotes.js'></script>
 
