--- a/display/src/index.html
+++ b/display/src/index.html
@@ -11,8 +11,6 @@
         <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css' rel='stylesheet' 
               integrity='sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH' 
               crossorigin='anonymous'>
-        
-        <link rel='stylesheet' href='css/gallery.css'>
     </head>
     <body data-bs-theme='dark'>
         <div id='content'>
@@ -28,7 +26,7 @@
         <script src='app/clock/clock.js'></script>
         <script src='app/config/config.js'></script>
         <script src='app/consoleLog/consoleLog.js'></script>
-        <script src='js/app/gallery.js'></script>
+        <script src='app/gallery/gallery.js'></script>
         <script src='js/app/quotes.js'></script>
 
         <script src='js/util/controller.js'></script>
