--- a/display/src/index.html
+++ b/display/src/index.html
@@ -17,19 +17,18 @@
             <h1>Hello, World!</h1>
         </div>
 
-        <script src='js/util/full_screen.js'></script>
-        <script src='js/util/common.js'></script>
-        <script src='js/util/base.js'></script>
-        <script src='js/util/appList.js'></script>
+        <script src='js/full_screen.js'></script>
+        <script src='js/common.js'></script>
+        <script src='js/base.js'></script>
+        <script src='js/appList.js'></script>
+        <script src='js/controller.js'></script>
 
         <script src='app/appSwitcher/appSwitcher.js'></script>
         <script src='app/clock/clock.js'></script>
         <script src='app/config/config.js'></script>
         <script src='app/consoleLog/consoleLog.js'></script>
         <script src='app/gallery/gallery.js'></script>
-        <script src='js/app/quotes.js'></script>
-
-        <script src='js/util/controller.js'></script>
+        <script src='app/quotes/quotes.js'></script>
 
 <!--        Bootstrap-->
         <script src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js' 
