--- a/display/src/index.html
+++ b/display/src/index.html
@@ -29,6 +29,8 @@
         <script src='app/consoleLog/consoleLog.js'></script>
         <script src='app/gallery/gallery.js'></script>
         <script src='app/quotes/quotes.js'></script>
+        <script src='app/weather/weather.js'></script>
+        <script src='https://static.elfsight.com/platform/platform.js' async></script>
 
 <!--        Bootstrap-->
         <script src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js' 
