weather and calender skeletons added

--- a/display/src/index.html
+++ b/display/src/index.html
@@ -30,7 +30,7 @@
         <script src='app/gallery/gallery.js'></script>
         <script src='app/quotes/quotes.js'></script>
         <script src='app/weather/weather.js'></script>
-        <script src='https://static.elfsight.com/platform/platform.js' async></script>
+<!--        <script src='https://static.elfsight.com/platform/platform.js' async></script>-->
 
 <!--        Bootstrap-->
         <script src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js' 
