Skeleton for calendar

--- a/display/src/index.html
+++ b/display/src/index.html
@@ -24,6 +24,7 @@
         <script src='js/controller.js'></script>
 
         <script src='app/appSwitcher/appSwitcher.js'></script>
+        <script src='app/calendar/calendar.js'></script>
         <script src='app/clock/clock.js'></script>
         <script src='app/config/config.js'></script>
         <script src='app/consoleLog/consoleLog.js'></script>
