--- a/display/src/index.html
+++ b/display/src/index.html
@@ -12,7 +12,7 @@
               integrity='sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH' 
               crossorigin='anonymous'>
     </head>
-    <body data-bs-theme='dark'>
+    <body data-bs-theme='dark' style="background: black">
         <div id='content'>
             <h1>Hello, World!</h1>
         </div>
