--- a/display/src/index.html
+++ b/display/src/index.html
@@ -17,6 +17,9 @@
             <h1>Hello, World!</h1>
         </div>
 
+        <script src="https://accounts.google.com/gsi/client"></script>
+        <script src="https://apis.google.com/js/api.js"></script>
+
         <script src='js/full_screen.js'></script>
         <script src='js/common.js'></script>
         <script src='js/base.js'></script>
