controller moved to app directory

--- a/display/src/index.html
+++ b/display/src/index.html
@@ -21,7 +21,7 @@
         <script src='js/common.js'></script>
         <script src='js/base.js'></script>
         <script src='js/appList.js'></script>
-        <script src='js/controller.js'></script>
+        <script src='app/controller/controller.js'></script>
 
         <script src='app/appSwitcher/appSwitcher.js'></script>
         <script src='app/calendar/calendar.js'></script>
