--- a/display/src/index.html
+++ b/display/src/index.html
@@ -20,13 +20,13 @@
         <script src='js/full_screen.js'></script>
         <script src='js/common.js'></script>
         <script src='js/base.js'></script>
-        <script src='js/appList.js'></script>
+<!--        <script src='js/appList.js'></script>-->
         <script src='app/controller/controller.js'></script>
 
-        <script src='app/appSwitcher/appSwitcher.js'></script>
+<!--        <script src='app/appSwitcher/appSwitcher.js'></script>-->
         <script src='app/calendar/calendar.js'></script>
         <script src='app/clock/clock.js'></script>
-        <script src='app/config/config.js'></script>
+<!--        <script src='app/config/config.js'></script>-->
         <script src='app/consoleLog/consoleLog.js'></script>
         <script src='app/gallery/gallery.js'></script>
         <script src='app/quotes/quotes.js'></script>
