--- a/display/src/index.html
+++ b/display/src/index.html
@@ -17,24 +17,11 @@
             <h1>Hello, World!</h1>
         </div>
 
-<!--        <script src="https://accounts.google.com/gsi/client"></script>-->
-<!--        <script src="https://apis.google.com/js/api.js"></script>-->
-
         <script src='js/full_screen.js'></script>
         <script src='js/common.js'></script>
         <script src='js/base.js'></script>
-        <script src='js/appList.js'></script>
-        <script src='js/controller.js'></script>
-
-        <script src='app/appSwitcher/appSwitcher.js'></script>
-        <script src='app/calendar/calendar.js'></script>
-        <script src='app/clock/clock.js'></script>
-        <script src='app/config/config.js'></script>
-        <script src='app/consoleLog/consoleLog.js'></script>
-        <script src='app/gallery/gallery.js'></script>
-        <script src='app/quotes/quotes.js'></script>
-        <script src='app/weather/weather.js'></script>
-<!--        <script src='https://static.elfsight.com/platform/platform.js' async></script>-->
+        <script src='app/controller/controller.js'></script>
+        <script>controller.run(['appSwitcher', 'config', 'calendar', 'clock', 'consoleLog', 'gallery', 'quotes', 'weather']);</script>
 
 <!--        Bootstrap-->
         <script src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js' 
