tidy up index.html

--- a/display/src/index.html
+++ b/display/src/index.html
@@ -21,7 +21,11 @@
         <script src='js/common.js'></script>
         <script src='js/base.js'></script>
         <script src='app/controller/controller.js'></script>
-        <script>controller.run(['appSwitcher', 'config', 'calendar', 'clock', 'consoleLog', 'gallery', 'quotes', 'weather']);</script>
+        <script>
+            controller.run(
+                ['appSwitcher', 'config', 'calendar', 'clock', 'consoleLog', 'gallery', 'quotes', 'weather']
+            );
+        </script>
 
 <!--        Bootstrap-->
         <script src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js' 
