--- a/display/src/index.html
+++ b/display/src/index.html
@@ -23,7 +23,8 @@
         <script src='app/controller/controller.js'></script>
         <script>
             controller.run(
-                ['appSwitcher', 'config', 'calendar', 'clock', 'consoleLog', 'gallery', 'quotes', 'weather']
+                ['appSwitcher', 'config', 'calendar', 'clock', 'consoleLog', 'gallery',
+                'mondaine_clock', 'quotes', 'weather']
             );
         </script>
 
