--- a/display/src/index.html
+++ b/display/src/index.html
@@ -27,6 +27,7 @@
                 'mondaine_clock', 'quotes', 'weather']
             );
         </script>
+        <script src="https://kit.fontawesome.com/6cf54be146.js" crossorigin="anonymous"></script>
 
 <!--        Bootstrap-->
         <script src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js' 
