--- a/display/src/react.html
+++ b/display/src/react.html
@@ -11,40 +11,57 @@
 <body>
     <div id="root"></div>
     <script type="text/babel">
-    const { useState } = React;
 
-    function App() {
-        const s = useState('');
-        const text = s[0];
-        const setText = s[1];
+const { useState } = React;
 
-        return (
-            <div>
-                <h1>Change Config Outside</h1>
-                <TwoWayBindingComponent text={text} setText={setText} />
-                <button onClick={() => setText('External Change')}>Change Text</button>
-            </div>
-        );
-    }
+function ListEditor() {
+    const [list, setList] = useState(['Item 1', 'Item 2', 'Item 3']);
+    const [newItem, setNewItem] = useState('');
 
-    function TwoWayBindingComponent({ text, setText }) {
-        const handleChange = (event) => {
-            setText(event.target.value);
-        };
+    const handleAddItem = () => {
+        if (newItem.trim()) {
+            setList([...list, newItem]);
+            setNewItem('');
+        }
+    };
 
-        return (
-            <div>
-                <input
-                    type="text"
-                    value={text}
-                    onChange={handleChange}
-                />
-                <p>Current text: {text}</p>
-            </div>
-        );
-    }
+    const handleInputChange = (event) => {
+        setNewItem(event.target.value);
+    };
 
-    ReactDOM.render(<App />, document.getElementById('root'));
-    </script>
+    const handleEditItem = (index, newValue) => {
+        const updatedList = [...list];
+        updatedList[index] = newValue;
+        setList(updatedList);
+    };
+
+    return (
+        <div>
+            <h1>List Editor</h1>
+            <ul>
+                {list.map((item, index) => (
+                    <li key={index}>
+                        <input
+                            type="text"
+                            value={item}
+                            onChange={(event) => handleEditItem(index, event.target.value)}
+                        />
+                    </li>
+                ))}
+            </ul>
+            <input
+                type="text"
+                value={newItem}
+                onChange={handleInputChange}
+                placeholder="Add new item"
+            />
+            <button onClick={handleAddItem}>Add Item</button>
+        </div>
+    );
+}
+
+ReactDOM.render(<ListEditor />, document.getElementById('root'));
+
+</script>
 </body>
 </html>
