--- a/display/src/index.html
+++ b/display/src/index.html
@@ -11,6 +11,11 @@
         <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css' rel='stylesheet' 
               integrity='sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH' 
               crossorigin='anonymous'>
+
+        <script src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
+        <script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script>
+        <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+
     </head>
     <body data-bs-theme='dark'>
         <div id='content'>
@@ -23,10 +28,11 @@
         <script src='app/controller/controller.js'></script>
         <script>
             controller.run(
-                ['appSwitcher', 'config', 'calendar', 'clock', 'consoleLog', 'gallery',
+                ['appRotator', 'appSwitcher', 'config', 'calendar', 'clock', 'consoleLog', 'gallery',
                 'mondaine_clock', 'quotes', 'weather']
             );
         </script>
+        <script src="https://kit.fontawesome.com/6cf54be146.js" crossorigin="anonymous"></script>
 
 <!--        Bootstrap-->
         <script src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js' 
